@@ -32,23 +32,27 @@ function updateServerDialog() {
     var isRunning = serverManager.isRunning();
     
     if (isRunning) {
+	var url = new Object() ; serverManager.getServerUrl(url);
 	document.getElementById("start-button").setAttribute("style", "display: none;");
 	document.getElementById("stop-button").setAttribute("style", "display: visible;");
 	document.getElementById("status-description-label").value = "Server is running and is available at:";
-	document.getElementById("url-label-box").setAttribute("style", "display: visible;");
-	document.getElementById("url-label").value = "http://www.google.fr";
+	document.getElementById("url-label-box").setAttribute("style", "visibility: display;");
+	document.getElementById("url-label").value = url.value;
     } else {
 	document.getElementById("stop-button").setAttribute("style", "display: none;");
 	document.getElementById("start-button").setAttribute("style", "display: visible;");
 	document.getElementById("status-description-label").value = "Server is not running.";
-	document.getElementById("url-label-box").setAttribute("style", "display: none;");
+	document.getElementById("url-label-box").setAttribute("style", "visibility: hidden;");
     }
 }
 
 function startServer() {
     var serverManager = Components.classes["@kiwix.org/serverManager"].getService().
 	QueryInterface(Components.interfaces.IServerManager);
-    serverManager.start();
+    var binaryPath = whereis(env.isWindows() ? "kiwix-serve.exe" : "kiwix-serve");
+    var libraryPaths = library.paths;
+    var port = document.getElementById("port-textbox").value;
+    serverManager.start(binaryPath, libraryPaths, port);
     updateServerDialog();
 }
 
